--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   padding: 0;
   margin: 0;
   -webkit-perspective: 1000;
+  background-color: powderblue;
 }
 
 .areaTarjeta,
@@ -19,12 +20,24 @@ body {
 .caraSuperior {
   width: var(--w);
   height: var(--h);
+  min-width: 80px;
+}
+
+.tarjeta {
+  position: relative;
+  transform-style: preserve-3d;
+}
+
+.areaTarjeta:hover .tarjeta {
+  transform: rotateY(180deg);
 }
 
 .caraTrasera {
   background-color: lightcyan;
+  position: absolute;
 }
 
 .caraSuperior {
   background-color: orange;
+  position: absolute;
 }
