--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,23 @@ body {
   margin: 0;
   -webkit-perspective: 1000;
   background-color: powderblue;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .areaTarjeta,
 .tarjeta,
-.caraTrasera,
-.caraSuperior {
+.cara {
   width: var(--w);
   height: var(--h);
   min-width: 80px;
+  max-width: fit-content;
+  padding-left: 2px;
+  margin-top: 3px;
 }
 
 .tarjeta {
@@ -32,12 +40,41 @@ body {
   transform: rotateY(180deg);
 }
 
-.caraTrasera {
+.cara {
+  position: absolute;
+  backface-visibility: hidden;
+  box-shadow: inset 0 0 0 5px white;
+  font-size: 500%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Trasera {
   background-color: lightcyan;
+  position: absolute;
+
+  transform: rotateY(180deg);
+}
+
+.Superior {
+  background-color: orange;
   position: absolute;
 }
 
-.caraSuperior {
+.nuevoJuego {
   background-color: orange;
-  position: absolute;
+  padding: 20px;
+  margin-top: 2em;
+  border-radius: 50px;
+  border: white 5px solid;
+}
+
+.areaTarjeta {
+  float: left;
+}
+
+#tablero {
+  /* max-width: 80vh;
+    max-height: 80vh;*/
 }
